# ROKAE_MPC

./: .gitignore  CMakeLists.txt  README.md
MATLAB/: CasADi_test.m  MPC_Matrices.m  Prediction.m  ROKAE_SR4_MPC.m  ROKAE_SR4_MPC_G.m  ROKAR_SR4_MPC.m
Tracking_control/: ROKAE_SR4_MPC_Tracking_con.py
include/: MPC_Matrices.h  Prediction.h  ROKAE_SR4_MPC_TRACK_sim.h  ROKAE_SR4_MPC_sim.h
output_20260619/: control_inputs.csv  sys_outputs.csv
python/: generate_A_B.py  generate_G.py  generate_dotX.py  matrices_generate.py  pinocchio_com_tau.py  robot_AB.c  robot_AB.h  robot_AB.mexw64  robot_dotX.c  robot_dotX.h  robot_dotX.mexw64  robot_dynamics.h  robot_dynamics_G.h  robot_dynamics_G.mexw64
python_mujoco/: MPC_speed.py  ROKAE_SR4_MPC_sim.py
python_output/: control_inputs.csv  sys_outputs.csv
src/: MPC_Matrices.cpp  Prediction.cpp  ROKAE_SR4_MPC_TRACK_sim.cpp  ROKAE_SR4_MPC_sim.cpp  bindcode.cpp  dynamics_com_tau.cpp  robot_AB.c  robot_dynamics.c  robot_dynamics_G.c
stl/: xMateSR4C_base.stl  xMateSR4C_link1.stl  xMateSR4C_link2.stl  xMateSR4C_link3.stl  xMateSR4C_link4.stl  xMateSR4C_link5.stl  xMateSR4C_link6.stl
test/: test_dynamics.cpp
urdf/: xMateSR4C_gen.urdf
xml/: xMateSR4C.xml
